tests/toy/neg/000934_mutation.toylang
program a = { if a 0 sleep; } .
